--- a/hparams.yaml
+++ b/hparams.yaml
@@ -280,120 +280,124 @@ landoceandataset:
 inat2018:
   dataset:
     presence_only_loss: True # adds randomly sampled negatives to the loss
-    loss_weight: 5 # weight for the negative samples
+    loss_weight: 2048 # weight for the positive samples
     num_classes: 8142
     max_epochs: 50
     patience: 10
     batch_size: 2000
     inat_directory: "/data/sphericalharmonics/inat2018/"
-    imageencoder_checkpoint: "models/imagenecoder-epochepoch=79-val_lossval_loss=1.88.ckpt"
+    imageencoder_checkpoint: "models/iNat_2018_InceptionV3.pth.tar"
   direct-linear:
     optimizer:
-      lr: 0.026759754233532
-      wd: 1.0694490227156371e-08
+      lr: 0.0215931245370126
+      wd: 4.0312798092502344e-08
   direct-mlp:
-    dim_hidden: 96
-    num_layers: 2
-    optimizer:
-      lr: 0.0017579756255375
-      wd: 1.0421110114632018e-06
-  direct-siren:
-    dim_hidden: 64
-    num_layers: 2
-    optimizer:
-      lr: 0.0009865018308885
-      wd: 1.0448404666976477e-08
-  direct-fcnet:
     dim_hidden: 128
+    num_layers: 3
     optimizer:
-      lr: 0.0007005003107461
-      wd: 4.149227787086448e-07
+      lr: 0.0009538065138556
+      wd: 5.134379158178648e-07
+  direct-siren:
+    dim_hidden: 96
+    num_layers: 3
+    optimizer:
+      lr: 0.0014662523176354
+      wd: 1.49649299686669e-06
+  direct-fcnet:
+    dim_hidden: 96
+    optimizer:
+      lr: 0.0023546518189775
+      wd: 2.1169019314523244e-06
   cartesian3d-linear:
     optimizer:
-      lr: 0.0443600941174977
-      wd: 3.3334861375332064e-08
+      lr: 0.0717706320871482
+      wd: 1.2661137675830685e-08
   cartesian3d-mlp:
-    dim_hidden: 96
-    num_layers: 3
+    dim_hidden: 128
+    num_layers: 2
     optimizer:
-      lr: 0.0015117801763343
-      wd: 7.739356913637329e-05
+      lr: 0.0037915293616104
+      wd: 1.134916621201542e-06
   cartesian3d-siren:
-    dim_hidden: 96
+    dim_hidden: 128
     num_layers: 3
     optimizer:
-      lr: 0.0007702778328778
-      wd: 3.855590088265317e-08
+      lr: 0.0004327749253983
+      wd: 3.913300041353972e-07
   cartesian3d-fcnet:
     dim_hidden: 128
     optimizer:
-      lr: 0.0026955737451602
-      wd: 4.016751550974468e-07
+      lr: 0.0021545750923899
+      wd: 5.462617525894927e-07
   sphericalharmonics-linear:
-    legendre_polys: 30
+    embedding_dim: 32
+    legendre_polys: 20
     optimizer:
-      lr: 0.0002315948790818
-      wd: 2.5535176830799176e-06
+      lr: 0.0011960331534399
+      wd: 3.7217812029123536e-08
   sphericalharmonics-mlp:
     dim_hidden: 128
-    legendre_polys: 30
-    num_layers: 3
+    embedding_dim: 16
+    legendre_polys: 20
+    num_layers: 2
     optimizer:
-      lr: 0.0056219489838887
-      wd: 2.4395219908105905e-05
+      lr: 0.0003420139496323
+      wd: 4.7626079582758585e-06
   sphericalharmonics-siren:
-    dim_hidden: 96
-    legendre_polys: 10
+    dim_hidden: 128
+    embedding_dim: 32
+    legendre_polys: 25
     num_layers: 3
     optimizer:
-      lr: 0.0003980307039694
-      wd: 1.4712554569445154e-08
+      lr: 0.0005751391339615
+      wd: 6.706856265714853e-08
   sphericalharmonics-fcnet:
     dim_hidden: 64
+    embedding_dim: 16
     legendre_polys: 30
     optimizer:
-      lr: 0.0003476124588939
-      wd: 0.0001013775526523
+      lr: 0.0005493646556314
+      wd: 6.666338849670901e-07
   theory-linear:
     min_radius: 1
     max_radius: 360
-    frequency_num: 32
+    frequency_num: 48
     optimizer:
-      lr: 0.0014822399949988
-      wd: 9.789939761958362e-07
+      lr: 0.0006490103582957
+      wd: 2.4098980227615065e-07
   theory-mlp:
     min_radius: 73
     max_radius: 360
     frequency_num: 32
     dim_hidden: 96
-    num_layers: 1
+    num_layers: 2
     optimizer:
-      lr: 0.0016831560525992
-      wd: 9.816621149694803e-07
+      lr: 0.0004575679274629
+      wd: 1.432464775322704e-05
   theory-siren:
-    min_radius: 28
+    min_radius: 55
     max_radius: 360
     frequency_num: 16
-    dim_hidden: 96
-    num_layers: 3
+    dim_hidden: 128
+    num_layers: 2
     optimizer:
-      lr: 0.0003981517217457
-      wd: 1.1804579799765032e-08
+      lr: 0.0021927250152288
+      wd: 6.090123441385735e-07
   theory-fcnet:
     min_radius: 46
     max_radius: 360
-    frequency_num: 48
+    frequency_num: 32
     dim_hidden: 64
     optimizer:
-      lr: 0.0017382570463698
-      wd: 3.382042649534004e-07
+      lr: 0.0007095298051799
+      wd: 1.416144898156385e-06
   grid-linear:
-    min_radius: 46
+    min_radius: 1
     max_radius: 360
     frequency_num: 48
     optimizer:
-      lr: 0.0033250842171142
-      wd: 9.294788765611338e-07
+      lr: 0.0007335102046024
+      wd: 2.634619778552637e-07
   grid-mlp:
     min_radius: 1
     max_radius: 360
@@ -401,104 +405,162 @@ inat2018:
     dim_hidden: 96
     num_layers: 2
     optimizer:
-      lr: 0.0003569103264287
-      wd: 3.553683105397432e-06
+      lr: 0.0022836486726499
+      wd: 3.6878149635007606e-05
   grid-siren:
-    min_radius: 46
+    min_radius: 19
     max_radius: 360
-    frequency_num: 64
+    frequency_num: 32
     dim_hidden: 96
-    num_layers: 2
+    num_layers: 3
     optimizer:
-      lr: 0.0003993963218775
-      wd: 1.6829832832612974e-05
+      lr: 0.0009243389246422
+      wd: 2.035160090081225e-07
   grid-fcnet:
     min_radius: 1
-    max_radius: 360
-    frequency_num: 16
-    dim_hidden: 128
+    max_radius: 10
+    frequency_num: 32
+    dim_hidden: 96
     optimizer:
-      lr: 0.0161380947639069
-      wd: 1.3604856841587403e-05
+      lr: 0.0026359530101076
+      wd: 4.3360370746728806e-08
   spherec-fcnet:
-    dim_hidden: 64
+    dim_hidden: 96
     frequency_num: 32
     min_radius: 1
     optimizer:
-      lr: 0.0004085133755739
-      wd: 0.0002548012131488
+      lr: 0.0011216854072818
+      wd: 4.123945289092067e-06
   spherec-linear:
-    frequency_num: 32
+    frequency_num: 48
     min_radius: 1
     optimizer:
-      lr: 0.0115064156381245
-      wd: 1.1143454754662313e-06
+      lr: 0.0009734989919278
+      wd: 1.1409556218365873e-08
   spherec-mlp:
-    dim_hidden: 128
-    frequency_num: 48
-    min_radius: 55
-    num_layers: 1
-    optimizer:
-      lr: 0.000655104882843
-      wd: 1.8725491358007489e-06
-  spherec-siren:
-    dim_hidden: 64
-    frequency_num: 48
+    dim_hidden: 32
+    frequency_num: 64
     min_radius: 1
     num_layers: 2
     optimizer:
-      lr: 0.0009891030125081
-      wd: 2.381892293948921e-06
+      lr: 0.0008910385456353
+      wd: 6.833477924009056e-08
+  spherec-siren:
+    dim_hidden: 96
+    frequency_num: 16
+    min_radius: 1
+    num_layers: 3
+    optimizer:
+      lr: 0.0011384367511737
+      wd: 1.7647770459828117e-08
   spherecplus-fcnet:
+    dim_hidden: 96
+    frequency_num: 32
+    min_radius: 28
+    optimizer:
+      lr: 0.0028843410949753
+      wd: 1.7870547702722257e-07
+  spherecplus-linear:
+    frequency_num: 16
+    min_radius: 1
+    optimizer:
+      lr: 0.0021238865582142
+      wd: 4.037335153822161e-08
+  spherecplus-mlp:
+    dim_hidden: 64
+    frequency_num: 16
+    min_radius: 1
+    num_layers: 3
+    optimizer:
+      lr: 0.0003739451805819
+      wd: 1.1374346971081608e-08
+  spherecplus-siren:
     dim_hidden: 128
     frequency_num: 32
-    min_radius: 1
-    optimizer:
-      lr: 0.0001498389841932
-      wd: 3.478117814663395e-05
-  spherecplus-linear:
-    frequency_num: 48
-    min_radius: 1
-    optimizer:
-      lr: 0.0001891341562919
-      wd: 0.0002150017595589
-  spherecplus-mlp:
-    dim_hidden: 96
-    frequency_num: 48
-    min_radius: 73
+    min_radius: 55
     num_layers: 2
     optimizer:
-      lr: 0.0014819445568459
-      wd: 5.647278593739804e-06
-  spherecplus-siren:
-    dim_hidden: 64
-    frequency_num: 48
-    min_radius: 1
-    num_layers: 2
-    optimizer:
-      lr: 0.0001162801997555
-      wd: 2.3356801124095235e-05
+      lr: 0.0004386217986594
+      wd: 1.1080146035792031e-08
   wrap-fcnet:
-    dim_hidden: 96
+    dim_hidden: 128
     optimizer:
-      lr: 0.0010087097882586
-      wd: 1.7931955938322433e-08
+      lr: 0.001655827506699
+      wd: 1.0306873735652858e-08
   wrap-linear:
     optimizer:
-      lr: 0.0354408202661779
-      wd: 1.272137301610298e-08
+      lr: 0.0749012901276666
+      wd: 1.3952004640595389e-08
   wrap-mlp:
-    dim_hidden: 128
-    num_layers: 3
+    dim_hidden: 96
+    num_layers: 2
     optimizer:
-      lr: 0.0093841559458871
-      wd: 5.826340526135904e-07
+      lr: 0.0026087433209351
+      wd: 2.1084050038386298e-07
   wrap-siren:
-    dim_hidden: 128
+    dim_hidden: 96
     num_layers: 3
     optimizer:
-      lr: 0.0006530288912067
-      wd: 1.9942069824219408e-08
+      lr: 0.0011636412654323
+      wd: 2.385106462320199e-07
+  spheremplus-fcnet:
+    dim_hidden: 96
+    frequency_num: 48
+    min_radius: 1
+    optimizer:
+      lr: 0.0003554616781937
+      wd: 2.085083517521738e-06
+  spheremplus-linear:
+    frequency_num: 32
+    min_radius: 1
+    optimizer:
+      lr: 0.0002123506526277
+      wd: 3.7350252385129394e-07
+  spheremplus-siren:
+    dim_hidden: 96
+    frequency_num: 16
+    min_radius: 10
+    num_layers: 2
+    optimizer:
+      lr: 0.0003814298928104
+      wd: 1.3283019016013778e-08
+  spheremplus-mlp:
+    dim_hidden: 128
+    frequency_num: 64
+    min_radius: 1
+    num_layers: 2
+    optimizer:
+      lr: 0.0008984506546291
+      wd: 0.0001101119977286
+  spherem-fcnet:
+    dim_hidden: 128
+    frequency_num: 64
+    min_radius: 10
+    optimizer:
+      lr: 0.0006414353761487
+      wd: 7.936088534456852e-06
+  spherem-linear:
+    frequency_num: 48
+    min_radius: 1
+    optimizer:
+      lr: 0.0018078246236454
+      wd: 8.859626088166103e-08
+  spherem-mlp:
+    dim_hidden: 64
+    frequency_num: 48
+    min_radius: 1
+    num_layers: 3
+    optimizer:
+      lr: 0.0003909876295334
+      wd: 1.899081702192895e-07
+  spherem-siren:
+    dim_hidden: 96
+    frequency_num: 16
+    min_radius: 73
+    num_layers: 3
+    optimizer:
+      lr: 0.0007806251011531
+      wd: 5.476020707248198e-08
 checkerboard:
   dataset:
     num_classes: 16
